--- a/css/refactor/math-slots.less
+++ b/css/refactor/math-slots.less
@@ -1,19 +1,31 @@
+// Copyright (c) 2013 Rice University
+// This software is subject to the provisions of the GNU AFFERO GENERAL PUBLIC LICENSE Version 3.0 (AGPL).
+// See LICENSE.txt for details.
 
 
+@soft-orange:   #F1DDB6;
 
 
+@cnx-string-definition: "Definition: ";
+
+.x-banner-feature (@svg, @book) {
+  // If feature is only one line prevent clipping of icon
+  min-height: 45px;
+
+  padding-top: 0;
+  margin-top: 0;
+  background: url("ccap-@{book}/@{svg}.svg") no-repeat;
+  background-position: 0 .2em;
+
+  .figure {
+    img { max-width: (@page-width - .25em); }
+  }
+}
 
 
-
-
-
-
-
-
-
+#part {
 //  - End of chapter review exercises and practice tests
 //    are two columns.
-#part {
   #chapter-end {
     #review-exercises {
       .style(...) {
@@ -26,9 +38,71 @@
       }
     }
   }
+  #book-end {
+    #end-of-book-solutions {
+      #title {
+        .style('checkpoint') {
+          .x-solutions-subheading-style();
+          content: "Checkpoint";
+        }
+      }
+    }
+  }
 }
 #content {
-  //  - Non-figure images are centered.
+  #note {
+    .style(student-project; ...) {
+      #utils>#pb>.inside(avoid);
+      background-color: @light-blue;
+      &:before {
+        .x-banner-feature(student-project; calculus);
+        display: block;
+        content: "";
+        padding-top: 41px;
+        min-height: 100%;
+        background-position: -5px 0px;
+        background-color: @black;
+        margin-left: -1em;
+        margin-right: -1em;
+        margin-top: -3px;
+      }
+    }
+    .style(checkpoint; ...) {
+      #utils>#pb>.inside(avoid);
+      .x-banner-feature(checkpoint; calculus);
+      padding-left:1.4em;
+    }
+    .style(media-2; ...) {
+      .x-banner-feature(media; calculus);
+    }
+    .style(problem-solving) {
+      #content>#note>.style(non-feature);
+      background-color: @soft-orange;
+      padding-bottom: 1em;
+    }
+    #title {
+      .style(@kind; @part; student-project) {
+        font-family: @font-family;
+        font-weight: bold;
+        color: @dark-blue;
+        font-size: 11pt;
+        padding-bottom: 0em;
+        margin-top: 1.5em;
+        margin-bottom: 1em;
+        border-bottom: none;
+      }
+      .style(@kind; @part; definition) {
+        margin-top: 0em;
+        content: @cnx-string-definition;
+        display: block;
+      }
+      .style(@kind; @part; problem-solving) {
+        #content>#note>#title>.style(non-feature);
+      }
+
+    }
+  }
+//  - Non-figure images are centered.
   .x-center-image() {
     display: block;
     margin: auto;
@@ -87,6 +161,18 @@
   #section {
     .style(section-exercises; @part; ...) {
       .x-column-count(2);
+    }
+  }
+  #example {
+    #title {
+      .style(any) {
+        page-break-after: avoid;
+      }
+    }
+  }
+  #table {
+    .style(any; any; note) {
+      background-color:#fff;
     }
   }
 }
